--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -18,7 +18,10 @@
 <resources>
 
     <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
-
+        <item name="colorPrimary">#616161</item>
+        <item name="colorPrimaryDark">#373737</item>
+        <item name="colorAccent">#f06292</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
     </style>
 
     <style name="Theme.Bacon.Detail">
