--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -58,17 +58,18 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/main_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
-        android:src="@drawable/ic_share"
+        android:src="@mipmap/ic_launcher"
         app:borderWidth="0dp"
         app:elevation="6dp"
-        app:fabSize="normal"
+        android:scaleType="center"
         app:layout_anchor="@id/recycler_view"
         app:layout_anchorGravity="bottom|right|end"
-        app:pressedTranslationZ="12dp" />
+        app:pressedTranslationZ="12dp"
+        android:onClick="clickFab"/>
 
 </android.support.design.widget.CoordinatorLayout>
