--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -72,4 +72,9 @@
         app:pressedTranslationZ="12dp"
         android:onClick="clickFab"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="wtf"/>
+
 </android.support.design.widget.CoordinatorLayout>
