--- a/XYZReader/src/main/res/values/styles.xml
+++ b/XYZReader/src/main/res/values/styles.xml
@@ -1,26 +1,20 @@
-<!-- File created by the Android Action Bar Style Generator
-
-     Copyright (C) 2012 readyState Software Ltd
-
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-  
-          http://www.apache.org/licenses/LICENSE-2.0
-  
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
--->
-
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">#90a4ae</item>
-        <item name="colorPrimaryDark">#62757f</item>
-        <item name="colorAccent">#ff7043</item>
-    </style>
+<style name="Theme.Bacon" parent="@style/Theme.AppCompat.Light.NoActionBar">
+    <item name="colorPrimary">#90a4ae</item>
+    <item name="colorPrimaryDark">#62757f</item>
+    <item name="colorAccent">#ff7043</item>
+</style>
 
+<style name="Theme.Bacon.List">
+    <item name="android:windowExitTransition">@transition/main_exit</item>
+    <item name="android:windowReenterTransition">@transition/main_enter</item>
+</style>
+
+<style name="Theme.Bacon.Details">
+    <item name="android:windowSharedElementEnterTransition">@transition/shared_photo</item>
+</style>
 </resources>
+
+
