--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -88,6 +88,8 @@
                     android:textColor="@color/body_text_primary_color"
                     android:textColorLink="@color/theme_accent"
                     android:textSize="@dimen/detail_body_text_size"
+                    android:ellipsize="end"
+                    android:maxLines="20"
                     android:lineSpacingMultiplier="@fraction/detail_body_line_spacing_multiplier" />
 
 
