--- a/XYZReader/src/main/res/layout/fragment_article_detail.xml
+++ b/XYZReader/src/main/res/layout/fragment_article_detail.xml
@@ -99,7 +99,7 @@
     </com.example.xyzreader.ui.ObservableScrollView>
 
 
-    <ImageButton android:id="@+id/share_fab"
+    <ImageButton android:id="@+id/share_fab_old"
         android:stateListAnimator="@animator/fab_state_list_anim"
         android:background="@drawable/add_fab_background"
         android:layout_gravity="bottom|end"
@@ -109,6 +109,20 @@
         android:layout_height="56dp"
         android:src="@drawable/ic_share"
         android:elevation="@dimen/fab_elevation"
+        android:contentDescription="@string/action_share"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/share_fab"
+        android:stateListAnimator="@animator/fab_state_list_anim"
+        android:layout_gravity="bottom|end"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:src="@drawable/ic_share"
+        android:elevation="@dimen/fab_elevation"
+        android:translationZ="@dimen/fab_press_translation_z"
         android:contentDescription="@string/action_share"
         />
 </com.example.xyzreader.ui.DrawInsetsFrameLayout>
